Agrega instrucciones para levantar proyecto con Tomcat